test_case/rust-lang_rust/55613_445469382_2.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/rust-2018/trait-import-suggestions.rs","byte_start":1178,"byte_end":1191,"line_start":43,"line_end":43,"column_start":13,"column_end":26,"is_primary":true,"text":[{"text":"    let y = u32::from_str(\"33\"); //~ ERROR no function or associated item named `from_str`","highlight_start":13,"highlight_end":26}],"label":"function or associated item not found in `u32`","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"
